--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
     <title>Markdown Bot</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    Hello world
+    <div class="header">
+      <img class="bot-logo" src="img/md-bot-logo.png">
+      <h1 class="name">MARKDOWN BOT</h1>
+      <a class="add" href="https://bit.ly/md-bot"><button class="invite">Add to your server</button></a>
+    </div>
+    <hr>
+    <div class="info">
+      <h1 class="about"><strong>What is Markdown Bot?</strong></h1>
+      <p class="about">Markdown Bot is, as the name suggests: a bot that has to do with markdown.</p>
+      <p class="about">You can find out how to style your message using markdown - right in your discord server.</p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
